# skillsusa-comp-state-2023

./: README.md
A/: .gitignore  README.md  pyproject.toml  setup.cfg
A/src/encryption/: __init__.py  encryption.py
A/src/encryption/cli/: main.py
A/tests/: encrypt.py
B/: B.py  README.md  school_class.py
B/classes/: school_class.py
B/frontend/grade-report-frontend/: README.md  index.html  package-lock.json  package.json
B/frontend/grade-report-frontend/src/: App.vue
B/frontend/grade-report-frontend/src/components/: NavbarComponent.vue
B/frontend/grade-report-frontend/src/components/class/: ClassCardComponent.vue
B/frontend/grade-report-frontend/src/views/: MainView.vue
