[project]
name = "encryption"
version = "0.0.1"
authors = [
  { name="Zachary Hampton", email="zachary@zacharysproducts.com" },
]
description = "A package to encrypt four-digit integers."
readme = "README.md"
requires-python = ">=3.10"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project.scripts]
encryption = "encryption.cli.main:main"

[dependencies]
pytest = "*"